// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuList has the same snapshot 1`] = `
<div
  className="menu-list undefined"
  onChange={[Function]}
>
  <div
    className="menu-option flex-item"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <input
      checked={true}
      id="menu-home"
      name="menu"
      readOnly={true}
      type="radio"
      value="home"
    />
    <label
      htmlFor="menu-home"
    >
      HOME
    </label>
  </div>
  <div
    className="menu-option flex-item"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <input
      checked={false}
      id="menu-skills"
      name="menu"
      readOnly={true}
      type="radio"
      value="skills"
    />
    <label
      htmlFor="menu-skills"
    >
      SKILLS
    </label>
  </div>
  <div
    className="menu-option flex-item"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <input
      checked={false}
      id="menu-career"
      name="menu"
      readOnly={true}
      type="radio"
      value="career"
    />
    <label
      htmlFor="menu-career"
    >
      CAREER
    </label>
  </div>
  <div
    className="menu-option flex-item"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <input
      checked={false}
      id="menu-portfolio"
      name="menu"
      readOnly={true}
      type="radio"
      value="portfolio"
    />
    <label
      htmlFor="menu-portfolio"
    >
      PORTFOLIO
    </label>
  </div>
</div>
`;

exports[`MenuOption has the same snapshot 1`] = `
<div
  className="menu-option undefined"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={true}
    id="menu-portfolio"
    name="menu"
    readOnly={true}
    type="radio"
    value="portfolio"
  />
  <label
    htmlFor="menu-portfolio"
  >
    PORTFOLIO
  </label>
</div>
`;
